# teleoreactive-HSR-agent

src/MANIPULATION/object_grasper/: CMakeLists.txt  README.md  commitNotes.txt  joints.txt  package.xml
src/MSGS/msgs/: README.md  commit_notes.txt
src/MSGS/msgs/unsw_vision_msgs/: CMakeLists.txt  README.md  package.xml
src/MSGS/msgs/unsw_vision_msgs/msg/: BagPointDetection.msg  BoundingBox.msg  DetectionList.msg  InteractedObject.msg  ObjectDetection.msg  ObjectDetectionList.msg  PersonDetection.msg  PersonPointing.msg  VisualVector.msg
src/MSGS/msgs/unsw_vision_msgs/src/: test.cpp
src/MSGS/msgs/unsw_vision_msgs/srv/: FindObjectFrame.srv  FindObjectFromVector.srv  Gender.srv  IdentifyPerson.srv  MemorisePerson.srv  RecogniseObjects.srv  ViewObjects.srv  analizePerson.srv  lookup.srv  openPoseLookup.srv  setFrameRates.srv  startTrackingPerson.srv
src/MSGS/srv/: README.md
src/NAVIGATION/gmapping/: README.md
src/NAVIGATION/rosnav/: README.md
src/NAVIGATION/utils/: CMakeLists.txt  README.md  a.out  package.xml
src/NAVIGATION/utils/launch/: move_optimal_pickup.launch  pcl_add_to_laser.launch  person_follow.launch
src/NAVIGATION/utils/src/: labeled_poses.txt  laser_merger.py  move_optimal_pickup.py  person_follow.py  point_follow.py  pose_labell_reader.py  pose_labeller.py  region_visualiser.py  rotate_to_point.py  wall_following.py
src/PLANNING/: visualize_polygon.py
src/PLANNING/action_client/: CMakeLists.txt  README.md  package.xml
src/PLANNING/action_server/: CMakeLists.txt  README.md  package.xml
src/PLANNING/state_machine/: README.md
src/PLANNING/teleor/: README.md
src/PLANNING/teleor/clean_the_table_teleor/: CMakeLists.txt  package.xml
src/PLANNING/teleor/clean_the_table_teleor/include/: clean_the_table_foreign.hpp
src/PLANNING/teleor/clean_the_table_teleor/ql/: clean_the_table.qlg  clean_the_table_interface.ql  test_at.qlg  test_can_see.qlg  test_can_see_object.qlg  test_goes_to.qlg  test_guards.qlg  test_holding.qlg  test_is_ooi.qlg  test_near.qlg  test_not_holding.qlg  world_knowledge.qlg
src/PLANNING/teleor/clean_the_table_teleor/scripts/: generate_wm_data_script.py
src/PLANNING/teleor/clean_the_table_teleor/src/: clean_the_table_foreign.cpp  clean_the_table_interface.cpp
src/PLANNING/teleor/pedro-1.14/: AUTHORS  Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac  libtool
src/PLANNING/teleor/pedro-1.14/autom4te.cache/: output.0  requests  traces.0  traces.1
src/PLANNING/teleor/pedro-1.14/doc/: Makefile  Makefile.am  Makefile.in  README  pedro.info  pedro.texi  version.texi
src/PLANNING/teleor/pedro-1.14/src/: Makefile  Makefile.am  Makefile.in
src/PLANNING/teleor/pedro-1.14/src/c_api/: Makefile  README  build.bat  client_api.h  consumer.c  pedro_token.c  pedro_token.l  ping.c  pong.c  producer.c
src/PLANNING/teleor/pedro-1.14/src/examples/: Makefile  Makefile.am  Makefile.in  consumer.c  producer.c  ptick  ptick.c  tcl_eg.tcl
src/PLANNING/teleor/pedro-1.14/src/examples/.deps/: ptick.Po
src/PLANNING/teleor/pedro-1.14/src/java_api/: Client.java  Parser.java  PedroClient.java  PedroEvent.java  PedroGUI.java  PedroListener.java  PrologObject.java  Scanner.java  Token.java  token.flex
src/PLANNING/teleor/pedro-1.14/src/lib/: Makefile  Makefile.am  Makefile.in  channel.c  channel.h  channel_watch.c  channel_watch.h  client.c  clientConnection.c  clientConnection.h  pedro.h  pedro_defs.h
src/PLANNING/teleor/pedro-1.14/src/lib/.deps/: channel.Po  channel_watch.Po  client.Po  clientConnection.Po
src/PLANNING/teleor/pedro-1.14/src/python_api/: pedro_gui.py  pedro_test1.py  pedro_test2.py  setup.py
src/PLANNING/teleor/pedro-1.14/src/server/: Makefile  Makefile.am  Makefile.in  atomTable.c  atomTable.h  atoms.h  choicestack.c  choicestack.h  codeBuffer.c  codeBuffer.h  connection.c  connection.h  logger.py  machine.c  machine.h  manager.c  manager.h  objects.c  objects.h  p2p.c  p2p.h  parser.c  parser.h  pedro  pedro.c  pheap.c  pheap.h  pstack.c  pstack.h  ptrail.c  ptrail.h  subscription.c  subscription.h  token.c  token.h  token.l  varMap.c  varMap.h
src/PLANNING/teleor/pedro-1.14/src/server/.deps/: atomTable.Po  choicestack.Po  codeBuffer.Po  connection.Po  machine.Po  manager.Po  objects.Po  p2p.Po  parser.Po  pedro.Po  pheap.Po  pstack.Po  ptrail.Po  subscription.Po  token.Po  varMap.Po
src/PLANNING/teleor/pedro-1.14/win_build/: README  configure.ac  cp2win.bat  init_port  prepare_rel
src/PLANNING/tr/: CMakeLists.txt  README.md  db_error.txt  package.xml  world_model.sql
src/SPEECH/sound_stream/: CMakeLists.txt  README.md  package.xml
src/SPEECH/speech_to_text/: CMakeLists.txt  README.md  commit_notes.txt  package.xml
src/TASKS/tasks/: README.md  commitNotes.txt
src/TOOLS/common_utils/: CMakeLists.txt  README.md  package.xml
src/TOOLS/debug/: CMakeLists.txt  README.md  (+1 more)
src/VISION/utils/: CMakeLists.txt  README.md  commit_notes.txt  package.xml
src/VISION/utils/include/republisher/: republisher.h
src/VISION/utils/include/unsw_vision_utils/: PlaneDetector.h  PositionGenerator.h
src/VISION/utils/launch/: carry_my_luggage_vision.launch  carry_my_luggage_vision_salvado.launch  pcl-republisher.launch  plane_detector.launch  realsense.launch  receptionist_vision.launch  serve_breakfast_vision.launch  storing_groceries.launch  unsw_hand_cam_vision.launch  unsw_vision.launch  unsw_vision_nodelet.launch
src/VISION/utils/launch/demo/: rs_vision.launch
src/VISION/utils/src/: BagHandleDetector.py  BagPointingDetector.py  BagScanner.py  EmptySeatDetector.py  FaceAttributeExtractor.py  Image_saver.py  LookAt.py  ObjectFeatureExtractor.py  ObjectFrames.py  ObjectFramesDebug.py  PersonPointingDetector.py  PlaneDetector.cpp  PositionGenerator.cpp  SeatEmptyDetection.py  TestApi.py  ViewObjects.py  hand_cam_brightness.py  republisher.cpp
src/WORLD_MODEL/world_model/world_model_store_msgs/: CMakeLists.txt  package.xml
src/WORLD_MODEL/world_model/world_model_store_msgs/msg/: Details.msg
src/WORLD_MODEL/world_model/world_model_store_msgs/srv/: Get.srv  Insert.srv  Update.srv
(+681 files in other folders)
