<?xml version="1.0"?>
<package format="2">
  <name>clean_the_table_teleor</name>
  <version>0.1.0</version>
  <description>Clean the table TeleoR package</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>unsw_action_msg</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
  </export>
</package>